# cloud-secret-manager

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
cloudsecretmanager/: azure.py  gcp.py  secret_manager.py
tests/: test_az_mock.py  test_az_real_connection.py  test_gcp_mock.py  test_gcp_real_connection.py
