[tool.poetry]
name = "cloudsecretmanager"
version = "0.2.1"
description = "A unified interface for managing secrets across multiple cloud providers. This package includes concrete implementations for Azure Key Vault and Google Cloud Secret Manager, providing a consistent and simplified API for secret creation, retrieval, and management. It is designed to facilitate secure and efficient secret handling in cloud-based applications, promoting best practices in secret management."
authors = ["Zin Yosrim <zinyosrim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zinyosrim/cloud-secret-manager"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = "^3.9"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"
google-cloud-secret-manager = "^2.16.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
